--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
         <h1>Tizimlashtirilgan maktab g'oyasi asosida</h1>
         <h2>20-MAKTAB web dasturi</h2>
         <div class="more">
-            <a href="https://20-maktab.wuaze.com"><p>Kirish</p></a><p>Aloqa</p>
+            <a href="https://20-maktab.wuaze.com"><p>Kirish</p></a>
+            <a href="https://t.me/bek_okez_006"><p>Aloqa</p></a>
         </div>
     </div>
 </body>
