--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             color: white;
             display: inline;
             margin-right: 20px;
+            cursor: pointer;
         }
 
 
